# fligtSimProj2

./: AStar.h  BestFirstSearch.h  BreadthFirstSearch.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  Client.h  ClientHandler.h  CompareState.h  DepthFirstSearch.h  FileCacheManager.cpp  FileCacheManager.h  ISearchable.h  ISearcher.h  Main.cpp  Main.h  Matrix.cpp  Matrix.h  MatrixCacheAdapter.cpp  MatrixCacheAdapter.h  MatrixSearchClient.cpp  MatrixSearchClient.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  PQueueSearcher.h  Searcher.h  Server.h  Solver.h  SolverToSearcherAdapter.cpp  SolverToSearcherAdapter.h  State.cpp  State.h  StatePriority.h  StringReverser.cpp  (+4 more)
